Modifications following intro of new tests.